new UI, removed codeBtn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Spotify Wrapped Application</string>
+    <string name="log_in_to_spotify">Log In To Spotify</string>
+    <string name="generate_summary">Generate Summary</string>
+    <string name="spotify_wrapped">Spotify Wrapped</string>
 </resources>
