added separate pages for user profile and game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="generate_summary">Generate Summary</string>
     <string name="spotify_wrapped">Spotify Wrapped</string>
     <string name="request_code">Request Code</string>
+
+    <string name="title_user_profile">Profile</string>
+    <string name="title_game">Game</string>
+    <string name="game_in_development">Game in development</string>
 </resources>
