--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="game_in_development">Game in development</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome">Welcome</string>
+    <string name="back">Back</string>
+    <string name="cont">Continue</string>
+    <string name="part_one_text">Part One Text</string>
+    <string name="game">Game</string>
+
 </resources>
