slight animation changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="sure">Sure!</string>
     <string name="no">No, I\'m Good</string>
     <string name="maybe_later">Maybe Later</string>
+    <string name="part_one_text">Let\'s start with your playlists.\nBring back any memories?</string>
+    <string name="tap_prompt_text">Tap the image for more info.</string>
 </resources>
