--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="game">Game</string>
     <string name="title_text">Your Top Playlists</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="random_text">Random Text\nPlaylist Names\nMore Names</string>
+    <string name="random_text">Random Text</string>
     <string name="next">Next</string>
     <string name="save_credentials">Save Credentials</string>
     <string name="already_user">Already a user? Slide up to view your past summaries.</string>
@@ -25,4 +25,5 @@
     <string name="maybe_later">Maybe Later</string>
     <string name="part_one_text">Let\'s start with your playlists.\nBring back any memories?</string>
     <string name="tap_prompt_text">Tap the image for more info.</string>
+    <string name="random_number">30%</string>
 </resources>
